# dars

./: .gitignore  Makefile  cabal.project  default.nix  tdsi.sql
dars-server/: dars-server.cabal
dars-server/app/: Main.hs
dars-server/src/Dars/: API.hs  Action.hs  Config.hs  Prelude.hs  SQL.hs
dars-server/src/Dars/API/: Auth.hs  Common.hs
dars-server/src/Dars/Actions/: User.hs
dars-server/src/Dars/SQL/: User.hs
dars-server/src/Dars/Types/: Id.hs  User.hs
dars-ui/: package-lock.json  package.json
dars-ui/public/locales/ru/: translation.json
dars-ui/src/: App.tsx  i18n.ts  index.tsx
database/: postgresql.conf  run-postgresql.sh
nix/: overlay.nix
